2000-04-09  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* GTKTHREADS-VERSION: Release of 1.0.

	* threads.scm (gtkthreads-ensure-handler): Use
	gdk-threads-enter/leave.

	* configure.in: Added check for sgtk_gdk_threads_enter.
	Added check for gtk-config.  Added check for build-guile-gtk.

	* gtkthreads.c, gtkthreads.h (sgtk_gdk_threads_enter,
	sgtk_gdk_threads_leave): New functions.

2000-04-08  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* GTKTHREADS-VERSION: Release of 0.1.4.

	* gthread-guile.c (g_guile_thread_functions_for_glib): Filled in
	entries for create, yield, join and exit.
	(g_thread_self_guile_impl): Set the thread pointer to a pointer to
	the running thread.
	(g_thread_create_guile_impl, g_thread_join_guile_impl): New
	functions.

2000-04-06  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: Test if thread_create is present in
	GThreadFunctions.

	* acconfig.h: New file.

	* gthread-guile.c (g_thread_set_priority_guile_impl,
	g_thread_self_guile_imple): New functions.
	(g_guile_thread_functions_for_glib): Added above two functions.
	(Thanks to Ole Myren Rohne.)

2000-03-30  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* configure.in (LIBS): Put GUILE_LDFLAGS first in case it is
	installed under /usr/local.

2000-03-30  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* threads.scm (gtkthreads-handler?, gtkthreads-ensure-handler):
	New procedures.

2000-03-30  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* GTKTHREADS-VERSION: Release of 0.1.2.
	
	* gtkthreads.c, threads.scm (gtkthreads-update): Disabled.  (Not
	needed.  The true reason why things didn't get updated was simply
	that the X queue wasn't flushed.  This can be done with
	`gdk-flush'.)

	* Makefile.am: Add gtkthreads.x to BUILT_SOURCES.

	* gtkthreads.c, gtkthreads.h (gtkthreads-update): New procedure:
	Wakes up the main loop so that it begins to handle pending
	events.  (Ideally this should be performed automatically.)
	(g_poll): Extended to support waking up.
